<resources>
    <string name="app_name">Chatty</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="error_enter_username">Please enter a username.</string>
    <string name="error_enter_email">Please enter a valid email address.</string>
    <string name="error_enter_password">Please enter a password with at least 6 characters.</string>
    <string name="error_create_user">Couldn\'t create user :(</string>
    <string name="select_photo">Select Photo</string>
    <string name="log_out">Log out</string>
    <string name="proceed">Proceed</string>
    <string name="never_mind">Never mind</string>
    <string name="enter_message">Enter message</string>
    <string name="send">Send</string>
    <string name="select_user">Select user</string>
    <string name="messages">Messages</string>
    <string name="log_out_confirmation">Are you sure you want to log out?</string>
</resources>